--- a/IDSChunk.csproj
+++ b/IDSChunk.csproj
@@ -28,6 +28,9 @@
       <None Update="NomicVocab.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="tokenizer.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
   </ItemGroup>
 
 </Project>
